# french-sentiment-camembert

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml  docker.yml
notebooks/: 01_exploration.ipynb  02_preprocessing.ipynb  03_baseline.ipynb  04_finetuning.ipynb  05_evaluation.ipynb
results/data/: tokenized_datasets.pkl
results/metrics/: baseline_metrics.pkl  camembert_metrics.pkl  final_summary.pkl
results/models/: baseline_clf.pkl  baseline_vectorizer.pkl
results/models/camembert-sentiment/: config.json  tokenizer.json
scripts/: preprocess.py  train.py
src/: model.py
tests/: test_predict.py
