[project]
name = "french-sentiment-camembert"
version = "0.1.0"
description = "Fine-tuning CamemBERT for French sentiment analysis"
requires-python = ">=3.12"

dependencies = [
    "torch>=2.0,<3",
    "transformers>=4.40,<5",
    "datasets>=2.18,<4",
    "scikit-learn>=1.4,<2",
    "matplotlib>=3.8,<4",
    "pandas>=2.1,<3",
    "numpy>=1.26,<3",
    "evaluate>=0.4,<1",
    "accelerate>=0.27,<2",
    "jupyter>=1.0,<2",
    "ipykernel>=6.29,<7",
    "streamlit>=1.33,<2",
    "sentencepiece>=0.2,<1",
    "protobuf>=4.25,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.4,<1",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
